k8s/product-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  type: ClusterIP
  selector:
    app: product
  ports:
    - port: 80
      targetPort: 8081
